--- a/Views/Modelli/Edit.cshtml
+++ b/Views/Modelli/Edit.cshtml
@@ -26,7 +26,7 @@ else
         </div>
         <div class="mt-3">
             <button type="submit" class="btn btn-primary">Salva Modifica</button>
-            <button type="submit" class="btn btn-danger ms-2">Elimina</button>
+            <button type="submit" class="btn btn-danger ms-2" asp-controller="Modelli" asp-action="Delete">Elimina</button>
         </div>
     </form>
 }
