--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 							</a>
 							<ul class="dropdown-menu p-2 p-sm-0">
 								<a class="nav-link text-dark" asp-area="" asp-controller="Marche" asp-action="List">Elenco Marche</a>
-								<a class="nav-link text-dark" asp-area="" asp-controller="Marche" asp-action="Add">Aggiungi Marche</a>
+								<a class="nav-link text-dark" asp-area="" asp-controller="Marche" asp-action="Add">Aggiungi Marca</a>
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
@@ -37,7 +37,16 @@
 							</a>
 							<ul class="dropdown-menu p-2 p-sm-0">
 								<a class="nav-link text-dark" asp-area="" asp-controller="Modelli" asp-action="List">Elenco Modelli</a>
-								<a class="nav-link text-dark" asp-area="" asp-controller="Modelli" asp-action="Add">Aggiungi Modelli</a>
+								<a class="nav-link text-dark" asp-area="" asp-controller="Modelli" asp-action="Add">Aggiungi Modello</a>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link text-dark dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Automobili
+							</a>
+							<ul class="dropdown-menu p-2 p-sm-0">
+								<a class="nav-link text-dark" asp-area="" asp-controller="Automobili" asp-action="List">Elenco Automobili</a>
+								<a class="nav-link text-dark" asp-area="" asp-controller="Automobili" asp-action="Add">Aggiungi Automobile</a>
 							</ul>
 						</li>
 						<li class="nav-item">
